# Call_Me_Maybe

./: pyproject.toml
data/input/: function_calling_tests.json
src/decoder/: constrained_decoder.py
src/models/: function_definition.py
src/services/: json_loader.py
